# wallpaper-rotator

./: .gitignore  README.md  io.github.tmeier_lang.WallpaperRotator.yaml  meson.build  meson_options.txt  wallpaper_rotator.py
data/desktop/: io.github.tmeier_lang.WallpaperRotator.desktop.in
data/metainfo/: io.github.tmeier_lang.WallpaperRotator.metainfo.xml.in
data/schemas/: io.github.tmeier_lang.WallpaperRotator.gschema.xml
src/: application.py  main.py  window.py
